# SServer

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  prohlaseni.txt  zadani.txt
examples/: config.txt  hello_executable.cpp
examples/tests/: requestResponseTest.cpp
src/: CConfiguration.cpp  CConfiguration.h  CDirectory.cpp  CDirectory.h  CError.cpp  CError.h  CExecutableScript.cpp  CExecutableScript.h  CFIle.cpp  CFIle.h  CFile.cpp  CFile.h  CHTMLFile.cpp  CHTMLFile.h  CHeader.cpp  CHeader.h  CImage.cpp  CImage.h  CLogger.h  CRequest.cpp  CRequest.h  CServer.cpp  CServer.h  CShutdown.cpp  CShutdown.h  CStaticFile.cpp  CStaticFile.h  Configuration.cpp  Configuration.h  File.cpp  File.h  HTMLFile.cpp  HTMLFile.h  Image.cpp  Image.h  Logger.cpp  Logger.h  main.cpp
src/logging/: CConsoleLogger.cpp  CConsoleLogger.h  CFileLogger.cpp  CFileLogger.h  CLog.cpp  CLog.h  CLogger.cpp  CLogger.h  LogLevel.cpp  LogLevel.h  LogType.cpp  LogType.h
www/: config.txt  hello_executable  index.html
